<resources>
    <string name="app_name">Login App Sqlite</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="upload_image">Upload Image</string>
    <string name="login">LOGIN</string>
</resources>