<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/background"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImg"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@mipmap/upload_image" />
            <TextView
                android:id="@+id/uploadImgtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_image"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_below="@id/profileImg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:textSize="20sp"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/inputFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/round_border"
            android:drawablePadding="10dp"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/full_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#635C5C"
            android:drawableTint="#6441A5"
            android:drawableLeft="@drawable/person"
            android:drawableStart="@drawable/person"
            android:importantForAutofill="no"
            tools:targetApi="m" />
        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_border"
            android:drawablePadding="12dp"
            android:ems="10"
            android:padding="15dp"
            android:drawableTint="#6441A5"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#635C5C"
            android:drawableLeft="@drawable/person"
            android:drawableStart="@drawable/person"
            android:importantForAutofill="no"
            tools:targetApi="m" />
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_border"
            android:drawablePadding="12dp"
            android:ems="10"
            android:padding="15dp"
            android:drawableTint="#6441A5"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#635C5C"
            android:drawableLeft="@drawable/email"
            android:drawableStart="@drawable/email"
            android:importantForAutofill="no"
            tools:targetApi="m" />
        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:drawableTint="#6441A5"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_border"
            android:drawablePadding="12dp"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#635C5C"
            android:drawableLeft="@drawable/phone"
            android:drawableStart="@drawable/phone"
            android:importantForAutofill="no"
            tools:ignore="TextFields"
            tools:targetApi="m" />
        <EditText
            android:id="@+id/inputDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_border"
            android:drawablePadding="12dp"
            android:ems="10"
            android:padding="15dp"
            android:drawableTint="#6441A5"
            android:hint="@string/date_of_birth"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#635C5C"
            android:drawableLeft="@drawable/calendar"
            android:drawableStart="@drawable/calendar"
            android:importantForAutofill="no"
            tools:targetApi="m" />
        <EditText
            android:id="@+id/inputAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_border"
            android:drawablePadding="12dp"
            android:ems="10"
            android:padding="15dp"
            android:drawableTint="#6441A5"
            android:hint="@string/address"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#635C5C"
            android:drawableLeft="@drawable/address"
            android:drawableStart="@drawable/address"
            android:importantForAutofill="no"
            tools:targetApi="m" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_border"
            android:drawablePadding="12dp"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:drawableTint="#6441A5"
            android:textColorHint="#635C5C"
            android:drawableLeft="@drawable/password"
            android:drawableStart="@drawable/password"
            android:importantForAutofill="no"
            tools:targetApi="m" />
        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_border"
            android:drawablePadding="12dp"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:drawableTint="#6441A5"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#635C5C"
            android:drawableLeft="@drawable/password"
            android:drawableStart="@drawable/password"
            android:importantForAutofill="no"
            tools:targetApi="m" />
        
        <Button
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#6441A5"
            android:padding="13dp"
            android:elevation="10dp"
            android:text="@string/sign_up"
            android:drawableTint="@color/white"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/signup"
            tools:targetApi="m"
            tools:ignore="RtlHardcoded" />




    </LinearLayout>

    

</ScrollView>